plugins {
	id 'java'
	id 'org.springframework.boot' version '3.1.1'
	id 'io.spring.dependency-management' version '1.1.0'
}

group = 'org.prgrms'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
	implementation 'com.h2database.h2:h2'

	testImplementation 'com.wix:wix-embedded-mysql:4.6.1'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.hamcrest:hamcrest-library:2.2'
	implementation 'com.zaxxer:HikariCP:4.0.3'
}

tasks.named('test') {
	useJUnitPlatform()
}
